# MyFavor-django-backend

./: README.md  build.sh  db.sqlite3  pyproject.toml  render.yaml
Crawling/: README.md  categories_category.csv  congrats.js  idols_idol.csv  idols_schedule.csv
config/: settings.py
users/: views.py
