[tool.poetry]
name = "tq"
version = "0.1.0"
description = ""
authors = ["sliverKi <lovee2756@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "~4.0"
pillow = "^9.4.0"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.14.0"
django-environ = "^0.10.0"
pyjwt = "^2.6.0"
djangorestframework-simplejwt = "^5.2.2"
bcrypt = "^4.0.1"
environ = "^1.0"
requests = "^2.28.2"
django-rest-framework = "^0.1.0"
django-rest-auth = "^0.9.5"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.5"
python-decouple = "^3.8"
dj-database-url = "^1.2.0"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
